roles/servers/files/10.32.10.89/iptables
# Generated by iptables-save v1.3.5 on Mon Dec 19 10:59:01 2011
*nat
:PREROUTING ACCEPT [120:16660]
:POSTROUTING ACCEPT [109:12489]
:OUTPUT ACCEPT [109:12489]
COMMIT
# Completed on Mon Dec 19 10:59:01 2011
# Generated by iptables-save v1.3.5 on Mon Dec 19 10:59:01 2011
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2642:784261]
:grp_adm.int - [0:0]
:grp_dev - [0:0]
-A INPUT -s 127.0.0.1 -i lo -j ACCEPT
-A INPUT -s 10.32.10.89 -i eth0 -j ACCEPT
-A INPUT -s 10.32.10.89 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.89 -p udp -m udp -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# Port 8080
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "jmx-console" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "web-console" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "admin" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "agent-inboundsms" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "sblite_sms_pusher_aqms" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "sblite_sms_pusher" --algo kmp -j ACCEPT
#-A INPUT -p tcp -m tcp -m string --string "smsapi" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "smsapi" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "smsdispatcher" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m string --string "smshotline" --algo kmp -j ACCEPT
# Port 80
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "jmx-console" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "web-console" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "admin" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "agent-inboundsms" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "sblite_sms_pusher_aqms" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "sblite_sms_pusher" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "smsapi" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "smsdispatcher" --algo kmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m string --string "smshotline" --algo kmp -j ACCEPT
# Others
-A INPUT -s 10.32.0.0/255.255.0.0 -p tcp -m tcp --dport 80 -j ACCEPT
#-A INPUT -s 10.32.0.0/255.255.0.0 -p tcp -m tcp --dport 8080 -j ACCEPT

# Limit and thortle connection
# 
-A INPUT -s 202.43.172.122 -i eth0 -p tcp -m limit --limit 2/s -j ACCEPT

# local connection
-A INPUT -s 10.32.10.0/255.255.255.0 -p tcp -m tcp --dport 3306 -j ACCEPT 
-A INPUT -s 10.32.10.53 -p tcp -m tcp --dport 21 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.16.179 -i eth0 -p udp --dport 161 -j ACCEPT
-A INPUT -s 10.32.16.180 -i eth0 -p udp --dport 161 -j ACCEPT
-A INPUT -s 10.32.16.180 -i eth0 -p tcp --dport 161 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8080 -j DROP
-A INPUT -p tcp -m tcp --dport 8443 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j grp_adm.int 
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j grp_dev 
-A INPUT -j LOG --log-prefix "INPUT -- DROP " --log-level 6 
-A INPUT -j DROP 
-A grp_adm.int -s 10.32.16.180 -j ACCEPT 
-A grp_adm.int -s 10.32.16.73 -j ACCEPT 
-A grp_adm.int -s 10.32.16.76 -j ACCEPT 
-A grp_adm.int -s 10.32.16.78 -j ACCEPT 
-A grp_adm.int -s 10.32.16.79 -j ACCEPT 
-A grp_adm.int -s 10.32.10.73 -j ACCEPT 
-A grp_adm.int -s 10.32.16.105 -j ACCEPT
-A grp_dev -s 10.32.6.12 -j ACCEPT 
-A grp_dev -s 10.32.6.11 -j ACCEPT 
-A grp_dev -s 10.32.6.1 -j ACCEPT 
-A grp_dev -s 10.32.6.17 -j ACCEPT 
-A grp_dev -s 10.32.6.24 -j ACCEPT 
-A grp_dev -s 10.32.6.26 -j ACCEPT 
COMMIT
# Completed on Mon Dec 19 10:59:01 2011
